--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "alexa-openrouter-proxy",
+  "name": "ciborgue-azul-openrouter-proxy",
   "version": "1.0.0",
+  "description": "Servidor proxy Node.js para interações com OpenRouter AI (Ciborgue Azul)",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "keywords": ["openrouter", "express", "ia", "proxy", "ciborgue-azul", "chatgpt", "render"],
+  "author": "Seu Nome",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
+
