--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ciborgue-azul-openrouter-proxy",
   "version": "1.0.0",
-  "description": "Servidor proxy Node.js para interações com OpenRouter AI (Ciborgue Azul)",
+  "description": "Servidor proxy para integração do Ciborgue Azul com OpenRouter via API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": ["openrouter", "express", "ia", "proxy", "ciborgue-azul", "chatgpt", "render"],
   "author": "Seu Nome",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
-
