--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ciborgue-azul-openrouter-proxy",
+  "name": "ciborgue-azul-openrouter-proxy-ia",
   "version": "1.0.0",
-  "description": "Servidor proxy para integração do Ciborgue Azul com OpenRouter via API",
+  "description": "Servidor do Ciborgue Azul com proxy para OpenRouter e interface web.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Seu Nome",
+  "keywords": ["openai", "openrouter", "proxy", "ciborgue", "ia", "chatbot", "express"],
+  "author": "Alberto Jesuino",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
